--- a/tex/sidosryhmat.tex
+++ b/tex/sidosryhmat.tex
@@ -42,10 +42,10 @@ Luonnollisesti eri sidosryhmät ovat kiinnostuneet erilaisiin käyttötarkoituks
 
   Ennestään sähkömarkkinoilla on ollut käytännössä kolme toimijaa: Energian myyjä, siirtäjä ja ostaja. Aggregaattori näistä kaikista (mahdollisesti) erillinen toimija, jonka tehtävänä on myydä sähkömarkkinoille joustoa. Aggregaattori voi ohjata esimerkiksi lämpöpumppupoolia ja käydä kauppaa sen mahdollistamalla kysyntäjoustolla.
 
-  Lämpöpumput ovat todennäköisesti käyttöpaikkansa suurimpia sähkönkäyttäjiä. Käyttäjän kannalta olisi edullista, mikäli lämpöpumpun käyttämä sähkö hinnoiteltaisiin muusta käytetystä sähköstä erillään. Saksalaisessa EVU-Sparre-järjestelmässä lämpöpumppu on sähköntoimittajan tai muun yrityksen ohjattavissa. Korvauksena kuormanohjauksesta kuluttaja saa hinnanalennusta lämpöpumpun käytetystä energiasta. Tämä tarkoittaa, että energiamittari mittaa erikseen lämpöpumpun käyttämän energian. Myöskin aggregaattorina toimivan yrityksen suorittama ohjaus tapahtuu AMI-mittareiden kuormanohjausreleen kautta. \parencite{enwg, VDEARN4100}
+  Lämpöpumput ovat todennäköisesti käyttöpaikkansa suurimpia sähkönkäyttäjiä. Käyttäjän kannalta olisi edullista, mikäli lämpöpumpun käyttämä sähkö hinnoiteltaisiin muusta käytetystä sähköstä erillään. Saksalaisessa EVU-Sparre-järjestelmässä lämpöpumppu on sähköntoimittajan tai muun yrityksen ohjattavissa. Korvauksena kuormanohjauksesta kuluttaja saa hinnanalennusta lämpöpumpun käytetystä energiasta, joten lämpöpumpun käyttämä energia on mitattava erikseen. Myöskin aggregaattorina toimivan yrityksen suorittama ohjaus tapahtuu AMI-mittareiden kuormanohjausreleen kautta. \parencite{enwg, VDEARN4100}
 
   Vastaavasti aurinkosähköinvertterin ohjaukseen releohjaus ei suoraan sovellu, sillä inverttereiden ohjaus tapahtuu usein monimutkaisemmalla kommunikaatiolla, kuin yksinkertaisella releellä. Sinällään tämä ei haittaa, sillä aurinkosähköjärjestelmän hyödyt etäohjauksen osalta ovat vähäiset; tavoitteena on kuitenkin saada tuotettua mahdollisimman paljon energiaa, ja tämän invertteri hoitaa automaattisesti.
 
-  Mikäli invertterit pystyvät kuitenkin tuottamaan loistehoa pätötehon tuotannosta riippumatta, tästä voi aggregaattori olla kiinnostunut, mikäli niitä voitaisiin ohjata virtuaalivoimalan tavoin isommissa ryhmissä. Nykyisillä ratkaisuilla tällainen ei kuitenkaan ole vielä mahdollista. Esimerkiksi standardoitu rajapinta pilvipalveluintegraatioihin eri valmistajien välillä voisi mahdollistaa tämän.
+  Mikäli invertterit pystyvät tuottamaan loistehoa pätötehon tuotannosta riippumatta, voi aggregaattori olla kiinnostunut ohjaamaan niitä virtuaalivoimalan tavoin isommissa ryhmissä. Nykyisillä ratkaisuilla tämä ei kuitenkaan ole vielä mahdollista. Esimerkiksi standardoitu rajapinta pilvipalveluintegraatioihin eri valmistajien välillä voisi mahdollistaa tämän.
 
   Aggregaattori voi myös tulevaisuudessa mahdollisesti ohjata akullisia järjestelmiä virtuaalivoimalan tavoin. Tällöin on sovittava raja-arvot, millaisilla varaustasoilla aggregaattori voi säätää energiavarastoa. Tämäkään ei tosin onnistu releohjauksella, ellei valmistajat sovi yhdessä standardoitua tapaa ohjaukselle.
