Sähköverkot kirjan lisäys lähteeksi, ja korjailuja.

--- a/tex/ilmari_references.bib
+++ b/tex/ilmari_references.bib
@@ -235,3 +235,10 @@ author = {Markku Manner},
 year   = {20170},
 school = {Metropolia Ammattikorkeakoulu}
 }
+
+@book{sahkoverkot,
+title     = {Sähköverkot 1},
+author    = {Jarmo, Elovaara and Liisa, Haarla},
+yer       = {2011},
+publisher = {Otatieto}
+}
