--- a/tex/niko_references.bib
+++ b/tex/niko_references.bib
@@ -195,3 +195,57 @@
 	title        = {Sähköpostikeskustelu Solarigon Ville Vairisen kanssa 19.8.2020},
 	organization = {Solarigo Oy},
 }
+
+@misc{Enphase,
+	organization = {Enphase Energy, Inc},
+	title        = {What is Enphase Envoy},
+	url          = {https://enphase.com/en-us/support/what-envoy},
+	urldate      = {2020-09-28},
+	date				 = {???}
+}
+
+@misc{Envertech,
+	organization = {Zhejiang Envertech Corporation Ltd.},
+	title        = {EVB202 User Operating Manual},
+	url          = {https://www.envertec.com/uploads/1906/EVB202_User_Manual.pdf},
+	urldate      = {2020-09-28},
+}
+
+@misc{Huawei,
+	organization = {Huawei Technologies Co., Ltd.},
+	title        = {SUN2000-3/4/5/6/8/10KTL-M0 Technical Specification},
+	url          = {https://solar.huawei.com/en-GB/download?p=%2F~%2Fmedia%2FSolar%2Fattachment%2Fpdf%2Feu%2Fdatasheet%2FSUN2000-3-10KTL-M0.pdf},
+	urldate      = {2020-09-28},
+	date				 = {2020-04-09}
+}
+
+@masterthesis{Mikrotuotanto,
+	author  = {Ina Lehto},
+	title   = {Mikrotuotannon liittäminen yleiseen sähkönjakeluverkkoon},
+	school  = {Teknillinen korkeakoulu, Sähkötekniikan laitos},
+	year    = {2009},
+}
+
+@article{Duck,
+	journal = {Science and Technology for the Built Environment},
+	publisher = {Taylor & Francis},
+	title = {Building energy research and the "duck curve"},
+	year = {2017},
+	author = {Radermacher, Reinhard},
+	copyright = {Copyright © 2017 ASHRAE. 2017},
+}
+
+@techreport{FluctuationIssues,
+	title       = {Wind and solar integration issues},
+	institution = {Task 25},
+	url         = {https://higherlogicdownload.s3.amazonaws.com/IEAWIND/4ab049c9-04ed-4f90-b562-e6d02033b04b/UploadedFiles/fX85N9V3Rh5u0TRjfpuF_Task25%20FactS%20Integration%20Issues%20April2020.pdf},
+	urldate     = {2020-09-28},
+}
+
+@article{duckCurve,
+	journal = {Science and Technology for the Built Environment},
+	publisher = {Taylor & Francis},
+	title = {Building energy research and the "duck curve"},
+	year = {2017},
+	author = {Radermacher, Reinhard},
+}
