--- a/tex/sanasto.tex
+++ b/tex/sanasto.tex
@@ -55,7 +55,7 @@
 
 \newglossaryentry{CHP}{
   name={CHP},
-  description={Compined Heat and Power -- yhteistuotantovoimalaitos}
+  description={Combined Heat and Power -- yhteistuotantovoimalaitos}
 }
 
 \newglossaryentry{V2G}{
