--- a/tex/tiivistelma.tex
+++ b/tex/tiivistelma.tex
@@ -1,13 +1,5 @@
-Tässä kandidaatintyössä käsitellään aurinkosähkö- ja lämpöpumppujärjestelmiä, sitä, kuinka niiden merkitys sähköverkossa kasvaa niiden suosion noustessa ja sitä, mitä niiden tarjoamat kommunikaatiorajapinnat mahdollistavat. Läpi käydään myös muutamia erilaisia standardien määrittelemiä kommunikaatiorajapintoja.
+Aurinkosähkö- ja lämpöpumppujärjestelmien määrän kasvaessa niiden merkitys Suomen sähköverkossa kasvaa. Niillä on useita eri rajapintoja, joiden hyödyntämisellä voidaan ehkäistä kasvaneen määrän aiheuttamia ongelmia sähköverkolle. Toisaalta rajapintojen hyödyntäminen hyödyttää järjestelmien omistajia, koska niiden avulla voidaan esimerkiksi hyödyntää tuotettua aurinkosähköä tehokkaammin. Työssä tarkastellaan millaisia rajapintoja aurinkosähköjärjestelmillä ja lämpöpumpuilla on, millaisia tarpeita eri sidosryhmillä on rajapintojen osalta sekä millaisia sovelluksia rajapinnoille on.
 
-Kun sähkön tuotantoa kasvavissa määrin siirtyy aurinkosähköjärjestelmille, lisää se sähkön tuotannon vaihteluita ja vaikeuttaa tuotantomäärien ennustamista. Tämä osaltaan luo tarvetta säätövoimalle ja kulutusjoustolle sähköenergiajärjestelmässä.
+Työn alussa käsitellään aurinkosähköjärjestelmien ja lämpöpumppujen teknistä toteutusta työn pohjustamiseksi, mutta pääpaino on kolmessa osa-alueessa: rajapinnoissa, sidosryhmissä ja sovelluksissa. Rajapinnoista syvimmin käsitellään Modbus-protokollaa, sillä sen käyttö on yleistä aurinkoinverttereissä ja lämpöpumpuissa. Lisäksi molempien järjestelmien osalta käsitellään sovellustason rajapintoja, inverttereille SunSpec Modbus ja lämpöpumpuille SG-Ready. Sidosryhmien osalta tarkastellaan käytännön esimerkkien avulla, millaisia tarpeita sidosryhmillä voisi olla rajapinnoille, ja miten he voisivat hyödyntää näitä. Sovelluksista käydään läpi niin sähköverkkoa kuin yksittäistä kuluttajaa hyödyttäviä sovelluksia, joista osa perustuu yksittäisen laitteen tarkasteluun ja osa taas useamman laitteen muodostamaan järjestelmään.
 
-Myös lämmitykseen ja jäähdytykseen käytettävien lämpöpumppujärjestelmien lisääntymisellä on vaikutusta sähköverkkoon. Lämpöpumppun korvatessa muita perinteisiä lämmitysmuotoja kuin suoraa sähkölämmmitystä, se yleensä kasvattaa käyttöpaikkansa energiankulutusta. Korvatessaa suoran sähkölämmityksen, lämpöpumppujärjestelmä todennäköisesti vähentää käyttöpaikan kokonaisenergiankulutusta, mutta vastavuoroisesti kasvattaa kulutettua huipputehoa.
-
-Yksi keino vastata edellä mainittuihin haasteisiin on järjestelmien älykäs ohjaus. Järjestelmien ohjaus vaatii kommunikointia ja kommunikointi tapahtuu standardoitujen kommunikaatiorajapintojen lävitse erilaisilla protokollilla. Järjestelmien ohjaamisella voidaan mahdollistaa myös muita sovelluksia, liittyen esimerkiksi kotiautomaatioon.
-
-Yksi suosituimmista matalan tason kommunikointiprotokollista on Modbus-standardin määrittelemä Modbus-protokolla, jonka avulla laitteet voivat kommunikoida paikallisesti tai Internetin välityksellä. Modbusin päälle voidaan rakentaa korkeamman tason viestintä- ja ohjausrajapintoja, jotka auttavat erilaisten sovellusten toteuttamista.
-
-Aurinkosähköjärjestelmien ohjaamiseen käytetyistä rajapinnoista tärkein on Sunspec Modbus, joka rakentuu Modbus-rajapinnan päälle, ja jolla aurinkosähköjärjestelmiin liittyviä inverttereitä kyetään ohjaamaan. Lämpöpumppujärjestelmien ohjaamiseen liittyvistä rajapinnoista tässä työssä käsiteltiin tarkemmin Saksalaista SG-Ready-rajapintaa, joka määrittelee lämpöpumppujärjestelmille neljä erilaista loogisin portein ohjattua käyntitilaa.
-
-Järjestelmien ohjauksen mahdollistamia sovelluksia ovat esimerkiksi kysyntäjousto, huipputehon rajoittaminen ja loistehon tuotanto. Edellä mainittujen sovellusten mahdollistamiseksi voi olla tarpeen ohjata järjestelmiä osana suurempaa ryhmää, eli poolia. Järjestelmäpooleja ohjaava ulkoinen taho eli aggregaattori voi osallistua poolin tuotanto- tai joustokyvyllä sähkömarkkinoille ja osaltaan huolehtia sähköenergiajärjestelmän tehotasapainosta.
+Rajapintojen hyödyntämismahdollisuudet vaativat standardointia, jotta uusien sovellusten kehittäminen on mahdollista. Tällöin voidaan myös kehittää laajempia kokonaisuuksia ohjaavia järjestelmiä, jolloin lämpöpumpuista ja aurinkoinverttereistä saadut hyödyt kasvavat. Tällä tavoin voidaan esimerkiksi pienentää huipputehoa muuntopiirin sisällä ja hyödyntää sähköverkon nykyistä kapasiteettia paremmin. Vaikka teknisesti kaikki sovellukset ovat mahdollisia toteuttaa, nykyisillä järjestelmäkomponenteilla eri toimijoiden välinen viestintä on haastavaa. Tämä johtuu siitä, että yhteistä rajapintaa eri toimijoille ei ole.
