Added Duck curve png

--- a/tex/jarjestelmat_sahkon_tuottajina.tex
+++ b/tex/jarjestelmat_sahkon_tuottajina.tex
@@ -71,6 +71,10 @@ Lähes kaikki verkon käyttöpaikat ovat verkonhaltijan sähkömittarin takana. 
   
   Nykyisellä keskitettyyn sähköntuotantoon rakennetulla verkolla aurinkosähköjärjestelmät tuovat haasteita, sillä pientuotantoa lisätessä johtolähtöjen jännitetasot nousevat ja verkon suojaustoimintoja voidaan joutua päivittämään. Esimerkiksi mikrotuotanto voi aiheuttaa vikavirtasuojauksen virhelaukaisun, mikäli tuotanto on lähellä muuntajan kiskoa ja se alkaa syöttämään läheisen lähdön vikatilanteessa vikavirtaa kiskoa kohta. Tällöin terveessä lähdössä tapahtuu virhelaukaisu. \parencite{Mikrotuotanto}
   
-  Aurinkosähkön osuuden kasvaminen sähköntuotannossa lisää säätövoiman tarvetta. Päivän aikana nettotehonmuutos on suuri, kun aurinkosähköjärjestelmät alkavat tuottaa sähköä samalla, kun kysyntä laskee ihmisten lähtiessä töihin. Vastaavasti sama tapahtuu illasta kun ihmiset palaavat töistä ja järjestelmän tuottoteho laskee. Tätä ilmiötä kuvaa niin sanottu "duck"-käyrä, joka nähdään kuvassa 2.3. Se kuvaa säädettävän energiatuotannon keskimääräistä hetkellistä tuotantotehoa vuorokauden aikana. \parencite{duckCurve}
+  Aurinkosähkön osuuden kasvaminen sähköntuotannossa lisää säätövoiman tarvetta. Päivän aikana nettotehonmuutos on suuri, kun aurinkosähköjärjestelmät alkavat tuottaa sähköä samalla, kun kysyntä laskee ihmisten lähtiessä töihin. Vastaavasti sama tapahtuu illasta kun ihmiset palaavat töistä ja järjestelmän tuottoteho laskee. Tätä ilmiötä kuvaa niin sanottu "duck"-käyrä, joka nähdään kuvassa 2.3. \begin{figure}
+    \centering
+    \includegraphics[width=1.1\textwidth]{figures/Duck_curve.png}
+    \caption{"Duck"-käyrä}
+  \end{figure} Se kuvaa säädettävän energiatuotannon keskimääräistä hetkellistä tuotantotehoa vuorokauden aikana. \parencite{duckCurve}
 
   Säätövoiman tarvetta voidaan helpottaa energiavarastojen avulla, jolloin energiantuotantoa voidaan "jatkaa" muutama tunti myöhemmäksi, jolloin myös hitaammin reagoivia voimalaitoksia voidaan hyödyntää paremmin säätövoimana. Energiavarastot tasaavat myös aurinkosähkön tuotannon ailahtelevuutta ja tuovat mahdollisuuden ohjata tuotantoa suuremman kysynnän ajalle.
