Added stuff to PV-systems

--- a/tex/jarjestelmat_sahkon_tuottajina.tex
+++ b/tex/jarjestelmat_sahkon_tuottajina.tex
@@ -77,4 +77,8 @@ Lähes kaikki verkon käyttöpaikat ovat verkonhaltijan sähkömittarin takana. 
     \caption{"Duck"-käyrä}
   \end{figure} Se kuvaa säädettävän energiatuotannon keskimääräistä hetkellistä tuotantotehoa vuorokauden aikana. \parencite{duckCurve}
 
-  Tuotantokapasiteetin tarvetta voidaan helpottaa energiavarastojen avulla, jolloin energiantuotantoa voidaan "jatkaa" muutama tunti myöhemmäksi, jolloin päivän tuotantoa saadaan siirrettyä illan huippukuormituksen ajalle. Energiavarastot tasaavat myös aurinkosähkön tuotannon ailahtelevuutta. 
+  Tuotantokapasiteetin tarvetta voidaan helpottaa energiavarastojen avulla, jolloin päivän energiantuotantoa saadaan siirrettyä illan huippukuormituksen ajalle. Energiavarastot tasaavat myös aurinkosähkön tuotannon ailahtelevuutta. Ongelmana energiavarastojen määrän lisääntymisessä on kuitenkin niiden korkea hankintahinta ja niistä saatavat hyödyt.
+
+  Yksittäiselle kuluttajalle energiavarastoista saatavat hyödyt tulevat tuotetun sähkön hyödyntämisestä kalliimman sähkönhinnan aikaan, sillä kuluttajan saama tuotto myydystä sähköstä on pienempi kuin itse kulutetun energian hinta. Lisäksi tuottaja voi haluta kodistaan enemmän energiaomavaraisen ja käyttää tuotetun sähkön kokonaan itse. Mikäli kuluttajalla ei ole kulutusjoustoon soveltuvia laitteita, voi se hyödyntää energiavarastoa tuotetun sähkön hyödyntämiseen tuotantoajan ulkopuolella.
+  
+  Tuottajasta puhuttaessa on taas useampi syy energiavarastojen hyödyntämiseen. Matala sähköstä saatava markkinahinta on tuottajallakin syy hyödyntää energiavarastoa, varsinkin jos hinta on tuotantohuipun aikaan matala. Tulevaisuudessa myös verkkokoodi voi pakottaa tuotantolaitokset investoimaan energiavarastoon sähköverkon vakauden ja jännitteen laadun ylläpitämiseksi.  
